# kedro-umbrella

./: Makefile  pyproject.toml  requirements.txt
examples/pipe-deformation/: .gitignore  Makefile
examples/pipe-deformation/conf/base/: catalog.yml  parameters.yml
examples/pipe-deformation/src/pipe_deformation/: pipeline_compose.py  pipeline_sensitivity.py
kedro_umbrella/: __init__.py  compose.py
