# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=65.5.1"]  # PEP 518 specifications
build-backend = "setuptools.build_meta"

[project]
name = "kedro-umbrella"
authors = [
    {name = "CNRS@CREATE"}
]
description = "kedro-umbrella allows to create ML based digital twin pipelines"
requires-python = ">=3.7"
dynamic = ["readme", "version", "dependencies"]

[tool.setuptools]
packages = ["kedro_umbrella", "kedro_umbrella.library"]
include-package-data = true

[tool.setuptools.package-data]
"kedro_umbrella" = [
  "template/*",
  "template/**/*",
  "template/**/.gitkeep"
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "kedro_umbrella.__version__"}
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
addopts="""
--cov-config pyproject.toml \
--cov-report xml:coverage.xml \
--cov-report term-missing \
--cov kedro_umbrella \
--cov tests \
--no-cov-on-fail \
-ra \
-p no:warnings \
"""
testpaths = [
  "tests"
]

[project.entry-points."kedro.project_commands"]
umbrella = "kedro_umbrella.plugin:commands"
